<resources>
    <string name="app_name">FreshKeeper</string>
    <string name="search_hint">식품을 검색하세요</string>
    <string name="tab_all">전체</string>
    <string name="tab_frozen">냉동</string>
    <string name="tab_refrigerated">냉장</string>
    <string name="tab_room_temp">상온</string>
    <string name="item_image_desc">아이템 이미지</string>
    <string name="item_name">비비고 만두</string>
    <string name="item_reg_date">등록일: 2024.03.21</string>
    <string name="item_exp_date">유통기한: 2024.04.21</string>
    <string name="item_countdown">D-10</string>
    <string name="icon_ref_desc">냉장고 아이콘</string>
    <string name="icon_calendar_desc">캘린더 아이콘</string>
    <string name="icon_barcode_desc">바코드 아이콘</string>
    <string name="icon_mypage_desc">마이페이지 아이콘</string>
    <string name="fab_desc">플로팅 액션 버튼</string>
    <string name="send_code">코드 전송</string>
    <string name="save">저장</string>
    <string name="verify">인증하기</string>
    <string name="find_password_title">비밀번호 찾기</string>
    <string name="email_hint">이메일</string>
    <string name="phone_hint">전화번호</string>
    <string name="verification_code_hint">인증코드</string>
    <string name="new_password_hint">새 비밀번호</string>
    <string name="confirm_new_password_hint">새 비밀번호 확인</string>
    <string name="select_date">날짜 선택</string>
    <string name="fridge_icon">냉장고 아이콘</string>
    <string name="fridge">냉장고</string>
    <string name="calendar">캘린더</string>
    <string name="barcode">바코드</string>
    <string name="mypage">마이페이지</string>
    <string-array name="category_array">
        <item>카테고리 선택</item>
        <item>건의사항</item>
        <item>이용문의</item>
        <item>기타사항</item>
    </string-array>
    <string-array name="sort_options">
        <item>유통기한순</item>
        <item>이름순</item>
        <item>등록순</item>
    </string-array>
    <string name="previous_month">이전 달</string>
    <string name="next_month">다음 달</string>
    <string name="back_button_desc">뒤로 가기 버튼</string>
    <string name="notification_icon_desc">알림 아이콘</string>
    <string name="post_title_placeholder">게시글 제목</string>
    <string name="post_user_placeholder">작성자</string>
    <string name="post_content_placeholder">게시글 내용</string>
    <string name="post_image_desc">게시글 이미지</string>
    <string name="comment_input_hint">댓글을 입력하세요</string>
    <string name="send_button_desc">댓글 전송 버튼</string>
    <string name="app_logo">Fresh Keeper</string>
    <string name="like_button_desc">좋아요 버튼</string>
    <!-- 추가된 부분 -->
    <string name="author_icon_desc">작성자 아이콘</string>
    <string name="commenter_icon_desc">댓글 작성자의 아이콘</string>
    <string name="nickname_placeholder">닉네임</string>
    <string name="comment_placeholder">댓글 내용</string>
    <string name="post_image_description">게시글 이미지</string>
    <string name="default_title">제목 없음</string>
    <string name="default_content">내용 없음</string>
    <string name="like_icon_description">좋아요 아이콘</string>
    <string name="comment_icon_description">댓글 아이콘</string>
    <string name="fk_vert_icon_desc">Vertical Icon</string>
    <string name="more_options_description">추가 옵션</string>
    <string name="option_edit">수정</string>
    <string name="option_delete">삭제</string>
</resources>
