<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#f9f9f9">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_password_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="#333"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint"
            android:padding="10dp"
            android:background="@android:drawable/edit_text"
            android:inputType="phone"
            android:autofillHints="phone"/>

        <Button
            android:id="@+id/send_code"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="48dp"
            android:text="@string/send_code"
            android:background="#65B120"
            android:textColor="#FFFFFF"
            android:padding="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/verification_code"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code_hint"
            android:padding="10dp"
            android:background="@android:drawable/edit_text"
            android:inputType="number"
            android:autofillHints="smsVerificationCode"/>

        <Button
            android:id="@+id/verify"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="48dp"
            android:text="@string/verify"
            android:background="#65B120"
            android:textColor="#FFFFFF"
            android:padding="10dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <EditText
        android:id="@+id/confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password_hint"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save"
        android:background="#65B120"
        android:textColor="#FFFFFF"
        android:padding="10dp"/>
</LinearLayout>
