<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <!-- 이전 달 화살표 아이콘 -->
    <ImageView
        android:id="@+id/previous_month_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_chevron_left_24"
        android:contentDescription="@string/previous_month" />

    <!-- 연도 및 월을 표시하는 TextView -->
    <TextView
        android:id="@+id/year_month_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="년/월"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- 다음 달 화살표 아이콘 -->
    <ImageView
        android:id="@+id/next_month_arrow"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_chevron_right_24"
        android:contentDescription="@string/next_month" />

    <!-- CompactCalendarView -->
    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        android:id="@+id/compactcalendar_view"
        android:layout_width="match_parent"
        android:layout_height="370.5dp"
        android:layout_below="@id/year_month_text_view"
        android:layout_marginTop="16dp"
        android:background="#F0F0F0"
        app:compactCalendarBackgroundColor="@android:color/white"
        app:compactCalendarCurrentSelectedDayBackgroundColor="@android:color/holo_green_light"
        app:compactCalendarTextColor="#000000" />

    <!-- 아이템 리스트 RecyclerView 추가 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/compactcalendar_view"
        android:layout_marginTop="0dp"
        android:layout_above="@id/footer"
        android:layout_weight="1"
        android:padding="8dp" />

    <!-- 하단바 -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="#8BC34A"
        android:orientation="horizontal">

        <!-- 냉장고 아이콘 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/icon_ref"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fk_ref"
                app:tint="#ffffff"
                android:contentDescription="@string/fridge_icon" />
            <TextView
                android:id="@+id/text_ref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fridge"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- 캘린더 아이콘 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/icon_calendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fk_calendar"
                app:tint="#000000"
                android:contentDescription="@string/calendar" />
            <TextView
                android:id="@+id/text_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:textColor="#000000"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- 바코드 아이콘 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/icon_barcode"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fk_bar"
                app:tint="#FFFFFF"
                android:contentDescription="@string/barcode" />
            <TextView
                android:id="@+id/text_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/barcode"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/icon_community"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/fk_community_icon"
                app:tint="#FFFFFF"
                android:scaleType="fitCenter"
                android:contentDescription="커뮤니티 아이콘" />
            <TextView
                android:id="@+id/text_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="커뮤니티"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- 마이페이지 아이콘 -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/icon_mypage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/fk_mypage"
                app:tint="#FFFFFF"
                android:contentDescription="@string/mypage" />
            <TextView
                android:id="@+id/text_mypage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mypage"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
